# signum-miner

./: Cargo.toml  README.md  build.rs  config.yaml  dependabot.yml  miner_ui.py  setup.py
.github/workflows/: release.yml
src/: config.rs  cpu_worker.rs  gpu_worker.rs  logger.rs  main.rs  miner.rs  ocl.rs  plot.rs  reader.rs  requests.rs  utils.rs
src/com/: api.rs  client.rs
src/future/: interval.rs  prio_retry.rs
src/windows/: app.rc
test_data/: test_config.yaml
